GUI working: add hide/show element (ContextCriterionCollection) add margin-top for elements under group border changed embeded icon for successful input to success icon change html tags to trinidad tags to hide empty elements fix position of file input in submission area add one more white space in front of a new category (Breadcrump) lift up the second action menu row to the first action menu row for export fix table layout in import workspace changed padding top for details layer in import workspace set background-color ffffff for throbber
Former-commit-id: 9dd20a17b1b4c4b44e3a313cf01d6561ec29596a

--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/ui/Files.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/ui/Files.jspf
@@ -43,12 +43,12 @@
 
 <%-- Add File --%>
 		<h:panelGroup layout="block" styleClass="files" rendered="#{!(genre.files_component_content_display == 'false' && genre.files_component_content_form_id == 'easy-submission' || genre.files_component_content_display == 'false' && genre.files_component_content_form_id == 'all')}">
-			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder fileSection"  rendered="#{component.index == 0 && component.size == 0}">
-				<b class="xLarge_area0_p8 endline labelLine clear">
+			<h:panelGroup layout="block" styleClass="free_area0_p6 endline itemLine noTopBorder fileSection xSmall_negMarginLExcl"  rendered="#{component.index == 0 && component.size == 0}">
+				<span class="xLarge_area0_p8 endline labelLine clear">
 					&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.files_optional != 'true'}" />
 						  <h:outputText value="#{lbl.EditItem_lblFile}"/>
 						  <span class="noDisplay">: </span>
-				</b>
+				</span>
 				<div id="ccContentHelper" class="ccContentHelper noDisplay">&#160;</div>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">					
 					<tr:inputFile id="inpFileUploaded" styleClass="fileInput" value="#{EasySubmission.uploadedFile}" valueChangeListener="#{EasySubmission.fileUploaded}"
