--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Import.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Import.jspf
@@ -77,7 +77,7 @@
 		<h:outputText value="#{lbl.easy_submission_lblCollectionOfItem} #{EasySubmission.contextName}." />
 		<!-- Subheadline ends here -->
 	</div>
-	<div class="subHeader">
+	<h:panelGroup layout="block" styleClass="subHeader" rendered="#{EasySubmissionSessionBean.hasErrorMessages or EasySubmissionSessionBean.hasMessages}">
 		<!-- Subheadline starts here -->
 			<h:messages styleClass="singleMessage" errorClass="messageError" warnClass="messageWarn" fatalClass="messageFatal" infoClass="messageStatus" layout="list" globalOnly="true" showDetail="false" showSummary="true" rendered="#{EasySubmissionSessionBean.numberOfMessages == 1}"/>
 			<h:panelGroup layout="block" styleClass="half_area2_p6 messageArea errorMessageArea" rendered="#{EasySubmissionSessionBean.hasErrorMessages and EasySubmissionSessionBean.numberOfMessages != 1}">
@@ -89,7 +89,7 @@
 				<h:messages errorClass="messageError" warnClass="messageWarn" fatalClass="messageFatal" infoClass="messageStatus" layout="list" globalOnly="true" showDetail="false" showSummary="true" rendered="#{EasySubmissionSessionBean.hasMessages}"/>
 			</h:panelGroup>
 		<!-- Subheadline ends here -->
-	</div>
+	</h:panelGroup>
 </div>
 
 <div id="ImgFullItem">
