--- a/pubman/pubman_presentation/src/main/webapp/editItem/ContentGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/ContentGroup.jspf
@@ -39,7 +39,7 @@
 	<div class="free_area0 itemBlockContent endline">
 
 <%-- Subject (Free Keywords) --%>
-		<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{!(genre.content_item_subject_display == 'false' && genre.content_item_subject_form_id == 'full-submission' || genre.content_item_subject_display == 'false' && genre.content_item_subject_form_id == 'all')}">
+		<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder marginTExcl6p" rendered="#{!(genre.content_item_subject_display == 'false' && genre.content_item_subject_form_id == 'full-submission' || genre.content_item_subject_display == 'false' && genre.content_item_subject_form_id == 'all')}">
 			<b class="xLarge_area0_p8 endline labelLine clear">
 				&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.content_item_subject_optional != 'true'}" /><h:outputText value="#{genre.content_item_subject_label}" converter="GenreLabelConverter"/><span class="noDisplay">: </span>
 			</b>
