--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step4Manual.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step4Manual.jspf
@@ -128,9 +128,9 @@
 				<h:outputText value="#{genre.content_label}" converter="GenreLabelConverter"/>
 			</h3>
 			<span class="seperator"></span>
-			<div class="free_area0 itemBlockContent endline">
+			<div class="free_area0 itemBlockContent marginTExcl6p endline">
 
-		<%-- Subject (Free Keywords) --%>
+				<%-- Subject (Free Keywords) --%>
 				<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{!(genre.content_item_subject_display == 'false' && genre.content_item_subject_form_id == 'easy-submission' || genre.content_item_subject_display == 'false' && genre.content_item_subject_form_id == 'all')}">
 					<b class="xLarge_area0_p8 endline labelLine clear">
 						&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.content_item_subject_optional != 'true'}" /><h:outputText value="#{genre.content_item_subject_label}" converter="GenreLabelConverter"/><span class="noDisplay">: </span>
@@ -140,7 +140,7 @@
 					</span>
 				</h:panelGroup>
 
-		<%-- DDC Subject (List -> first element) --%>
+				<%-- DDC Subject (List -> first element) --%>
 				<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{EditItem.hasSubjectClassification && !(genre.content_item_subject_display == 'false' && genre.content_item_subject_form_id == 'easy-submission' || genre.content_item_subject_display == 'false' && genre.content_item_subject_form_id == 'all')}">
 					<b class="xLarge_area0_p8 endline labelLine clear">
 						&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.content_item_subject_optional != 'true'}" /><h:outputText value="#{lbl.EditItem_lblClassifiedSubject}"/><span class="noDisplay">: </span>
@@ -159,7 +159,7 @@
 					</span>
 				</h:panelGroup>
 		
-		<%-- Abstract --%>		
+				<%-- Abstract --%>		
 				<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{!(genre.content_item_abstract_display == 'false' && genre.content_item_abstract_form_id == 'easy-submission' || genre.content_item_abstract_display == 'false' && genre.content_item_abstract_form_id == 'all')}">
 					<b class="xLarge_area0_p8 endline labelLine clear">
 						&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.content_item_abstract_optional != 'true'}" /><h:outputText value="#{genre.content_item_abstract_label}" converter="GenreLabelConverter"/><span class="noDisplay">: </span>
