--- a/pubman/pubman_presentation/src/main/webapp/list/gridList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/list/gridList.jspf
@@ -217,18 +217,18 @@ All rights reserved. Use is subject to license terms.
 		      	</td>
 		      	<td class="free_area0 endline status">
 		      		<span class="seperator"></span>
-		      		<span class="free_area0_p8 status statusArea">
-		      		<span class="free_area0 tiny_marginLExcl">
-						<h:panelGroup styleClass="big_imgArea statusIcon withdrawnItem" rendered="#{item.isStateWithdrawn}" />
-						<h:panelGroup styleClass="big_imgArea statusIcon pendingItem" rendered="#{item.isStatePending}" />
-						<h:panelGroup styleClass="big_imgArea statusIcon submittedItem" rendered="#{item.isStateSubmitted}" />
-						<h:panelGroup styleClass="big_imgArea statusIcon releasedItem" rendered="#{item.isStateReleased and !item.isStateWithdrawn}" />
-						<h:panelGroup styleClass="big_imgArea statusIcon inRevisionItem" rendered="#{item.isStateInRevision}" />
-					</span>
-							<h:outputLabel styleClass="medium_label endline xTiny_marginLExcl" rendered="#{item.isStateWithdrawn}">
+		      		<span class="free_area0 status statusArea">
+		      		
+						<h:panelGroup layout="block" styleClass="big_imgArea statusIcon withdrawnItem" rendered="#{item.isStateWithdrawn}" />
+						<h:panelGroup layout="block" styleClass="big_imgArea statusIcon pendingItem" rendered="#{item.isStatePending}" />
+						<h:panelGroup layout="block" styleClass="big_imgArea statusIcon submittedItem" rendered="#{item.isStateSubmitted}" />
+						<h:panelGroup layout="block" styleClass="big_imgArea statusIcon releasedItem" rendered="#{item.isStateReleased and !item.isStateWithdrawn}" />
+						<h:panelGroup layout="block" styleClass="big_imgArea statusIcon inRevisionItem" rendered="#{item.isStateInRevision}" />
+					
+						<h:outputLabel styleClass="free_area0_p3 medium_label endline" rendered="#{item.isStateWithdrawn}">
 							<h:outputText value="#{item.itemPublicState}" />
 						</h:outputLabel>
-						<h:outputLabel styleClass="medium_label endline xTiny_marginLExcl" rendered="#{!item.isStateWithdrawn}">
+						<h:outputLabel styleClass="free_area0_p3 medium_label endline" rendered="#{!item.isStateWithdrawn}">
 							<h:outputText value="#{item.itemState}" />
 						</h:outputLabel>
 					</span>
