--- a/pubman/pubman_presentation/src/main/webapp/yearbook/yearbookModeratorList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/yearbook/yearbookModeratorList.jspf
@@ -137,17 +137,17 @@
 					&#160;
  				</span>
  				<span class="seperator"></span>
- 				<span class="free_area0_p8 status statusArea">
- 					<h:panelGroup styleClass="big_imgArea statusIcon withdrawnItem tiny_marginLExcl" rendered="#{item.isStateWithdrawn}" />
- 					<h:panelGroup styleClass="big_imgArea statusIcon pendingItem tiny_marginLExcl" rendered="#{item.isStatePending}" />
- 					<h:panelGroup styleClass="big_imgArea statusIcon submittedItem tiny_marginLExcl" rendered="#{item.isStateSubmitted}" />
- 					<h:panelGroup styleClass="big_imgArea statusIcon releasedItem tiny_marginLExcl" rendered="#{item.isStateReleased and !item.isStateWithdrawn}" />
- 					<h:panelGroup styleClass="big_imgArea statusIcon inRevisionItem tiny_marginLExcl" rendered="#{item.isStateInRevision}" />
+ 				<span class="free_area0 status statusArea">
+ 					<h:panelGroup layout="block" styleClass="big_imgArea statusIcon withdrawnItem" rendered="#{item.isStateWithdrawn}" />
+ 					<h:panelGroup layout="block" styleClass="big_imgArea statusIcon pendingItem" rendered="#{item.isStatePending}" />
+ 					<h:panelGroup layout="block" styleClass="big_imgArea statusIcon submittedItem" rendered="#{item.isStateSubmitted}" />
+ 					<h:panelGroup layout="block" styleClass="big_imgArea statusIcon releasedItem" rendered="#{item.isStateReleased and !item.isStateWithdrawn}" />
+ 					<h:panelGroup layout="block" styleClass="big_imgArea statusIcon inRevisionItem" rendered="#{item.isStateInRevision}" />
 					<span class="noDisplay">(</span>
- 					<h:outputLabel id="lblItemPublicState" styleClass="medium_label xTiny_marginLExcl" rendered="#{item.isStateWithdrawn}">
+ 					<h:outputLabel id="lblItemPublicState" styleClass="free_area0_p3 medium_label" rendered="#{item.isStateWithdrawn}">
  						<h:outputText value="#{item.itemPublicState}" />
  					</h:outputLabel>
- 					<h:outputLabel id="lblItemState" styleClass="medium_label xTiny_marginLExcl" rendered="#{!item.isStateWithdrawn}">
+ 					<h:outputLabel id="lblItemState" styleClass="free_area0_p3 medium_label" rendered="#{!item.isStateWithdrawn}">
  						<h:outputText value="#{item.itemState}" />
  					</h:outputLabel>
  					<span class="noDisplay">)</span>
