--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
@@ -352,7 +352,7 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 
 .metaMenu a {
 	color: #FFFFFF;
-	background-color:#468EA2;
+	background-color:#006F7B;
 }
 
 .metaMenu button {
@@ -527,7 +527,7 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 	opacity:0;
 	-moz-opacity:0;
 	cursor:pointer;
-	background-color:#468EA2;
+	background-color:#006F7B;
 	color:#FFFFFF;
 }
 .metaMenu .selectionBox {
@@ -541,7 +541,7 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 	padding-top:0.2727em;
 	padding-bottom:0.2727em;
 	border:none;
-	background-color:#468EA2;
+	background-color:#006F7B;
 }
 
 .metaMenu .selectContainer:hover, .metaMenu .selectContainer:focus, .metaMenu .selectContainer:active {
@@ -782,7 +782,8 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 .activeButton {
 	float: right;
 	color: #FFFFFF;
-	background-color:#468EA2 !important;
+/*	background-color:#468EA2 !important; */
+	background-color:#006F7B !important;
 	border-color: #004465;
 }
 /*
