Role added to creator name in case of an organization creator (PubMan-2075)
Former-commit-id: 79c0c88f5a9af191081b88c6710b07a3930b8057

--- a/pubman/pubman_presentation/src/main/webapp/viewItem/PersOrgGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/PersOrgGroup.jspf
@@ -57,7 +57,7 @@
 						
 						<h:panelGroup styleClass="free_area0 creator clear"  rendered="#{creator.creatorType == 'ORGANIZATION'}">
 							<h:panelGroup id="txtCreatorOrganizationOrganizationName">
-								<h:outputText value="#{creator.creatorObj.organizationName}"/>
+								<h:outputText value="#{creator.creatorObj.organizationName}, #{creator.creatorRole}"  escape="false"/>
 							</h:panelGroup>
 							&#160;
 							<h:outputLink id="lnkCreatorOrganizationLink" styleClass="ouCard" rendered="#{creator.creatorObj.identifier != null and creator.creatorObj.identifier != ''}" value="#" onclick="openCenteredWindow('AffiliationDetailPage.jsp?id=#{creator.creatorObj.identifier}', 980, 400, 'Details');return false">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</h:outputLink>
@@ -76,7 +76,7 @@
 						</h:panelGroup>
 						<h:panelGroup styleClass="free_area0 creator creatorHidden tiny_marginRIncl" rendered="#{creator.creatorType == 'ORGANIZATION'}">
 							<h:panelGroup id="txtCreatorOrganizationOrganizationName">
-								<h:outputText value="#{creator.creatorObj.organizationName}"/>
+								<h:outputText value="#{creator.creatorObj.organizationName}, #{creator.creatorRole}"  escape="false"/>
 							</h:panelGroup>
 							&#160;
 							<h:outputLink id="lnkCreatorOrganizationLink" styleClass="ouCard" rendered="#{creator.creatorObj.identifier != null and creator.creatorObj.identifier != ''}" value="#" onclick="openCenteredWindow('AffiliationDetailPage.jsp?id=#{creator.creatorObj.identifier}', 980, 400, 'Details');return false">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</h:outputLink>
