--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/images.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/images.css
@@ -135,7 +135,7 @@
 
 /*BODY*/
 body {
-	background: url("../images/all_background_1.png") repeat-x scroll left top;
+	background: url("../images/all_background_1.jpg") repeat scroll left top;
 }
 
 body .wrapper {
