--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
@@ -92,7 +92,8 @@ input[type = text], textarea {
 }
 
 h1, h4, h5 {
-    font-family: "Myriad Pro Condensed", "Arial Narrow", sans-serif;
+/*    font-family: "Myriad Pro Condensed", "Arial Narrow", sans-serif; */
+	font-family: Trebuchet, "Trebuchet MS", sans-serif;
 }
 
 /*
@@ -119,7 +120,8 @@ body .wrapper, body .footer {
 
 
 /*FF3.x Print Issue (No more relevant in FF4)*/
-@media print {body * {
+@media print {
+	body * {
         overflow: visible !important;
         float: none !important;
         border-top: 0px #FFFFFF !important;
@@ -127,39 +129,37 @@ body .wrapper, body .footer {
         border-bottom: 0px #FFFFFF !important;
         border-left: 0px #FFFFFF !important;
 		list-style:none !important;
-}
+	}
 
 	/*Print Lists*/
-
-.listItemLine, .blockHeader, .blockHeader *, .listItem {
-        text-align: left !important;
-        float: left !important;
-        clear: both !important;
-}
-
+	.listItemLine, .blockHeader, .blockHeader *, .listItem {
+		text-align: left !important;
+		float: left !important;
+		clear: both !important;
+	}
+	
 	/*Print Items*/
-
-.itemLine, .itemBlockContent, .fullItem .blockHeader {
-        text-align: left !important;
-        float: left !important;
-}
-
-.paginator * {
-        float: left !important;
-}
-
-.blockHeader {
-        font-size: 1.4em !important;
-        margin-bottom: 0.6em !important;
-}
-
-.min_imgBtn, .std_imgBtn, .big_imgBtn, .lineToolSection, .formButtonArea {
-        visibility: hidden !important;
-}
-
-.messageArea {
-        visibility:hidden !important;
-}
+	.itemLine, .itemBlockContent, .fullItem .blockHeader {
+		text-align: left !important;
+		float: left !important;
+	}
+	
+	.paginator * {
+		float: left !important;
+	}
+	
+	.blockHeader {
+		font-size: 1.4em !important;
+		margin-bottom: 0.6em !important;
+	}
+	
+	.min_imgBtn, .std_imgBtn, .big_imgBtn, .lineToolSection, .formButtonArea {
+		visibility: hidden !important;
+	}
+	
+	.messageArea {
+		visibility:hidden !important;
+	}
 }
 
 input, button, textarea, select {
@@ -190,8 +190,7 @@ input, textarea, select {
     border-color: #AFA9A8;
 }
 
-input[type =
-"text"], textarea, select {
+input[type = "text"], textarea, select {
     background-color: #F3F8FA;
 }
 
@@ -415,6 +414,10 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 	height:1.3636em; 
 	background-color:#FFFFFF;
 	border:0.0909em solid #9fafae;
+}
+
+.free_area0.third_txtInput {
+	background-color:#f3f5f5;
 }
 
 /*LISTS & FULL ITEM*/
