- fontsize for h4 on start page - background-color for +- symbols in MPG Skin - link behaviour for links with(out) class attribute in MPG Skin

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/infoPage.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/infoPage.css
@@ -96,6 +96,11 @@
 	padding-bottom: 0em;
 }
 
+.infoPage .mainSection h4 {
+	font-size:120%;
+	margin-bottom:0.4545em;
+}
+
 .infoPage .sideSectionArea { 
 	width: 34em;
 }
