font-family for headerSection h1

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
@@ -762,6 +762,10 @@ body .wrapper {
 	border-style: solid;
 }
 
+/***** HEADER-SECTION *****/
+.headerSection h1 {
+	font-family: "Myriad Pro Condensed", "Arial Narrow", sans-serif;
+}
 
 /***** PRE-HEADER *****/
 .preListHeader {
