new width for table with radio buttons
Former-commit-id: 020d1e6fa6c88bebe09ec6172b772e42b979e4c8

--- a/pubman/pubman_presentation/src/main/webapp/search/ui/AnyFieldCriterionCollection.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/search/ui/AnyFieldCriterionCollection.jspf
@@ -75,7 +75,7 @@
 					&#160;<span class="noDisplay"> </span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:selectOneRadio id="selCriterionType" styleClass="medium_radioBtn xTiny_marginRIncl xHuge_area0" value="#{anyFieldCriterionBean.selectedType}" valueChangeListener="#{anyFieldCriterionBean.processTypeChanged}">
+					<h:selectOneRadio id="selCriterionType" styleClass="medium_radioBtn xTiny_marginRIncl quad_area0" value="#{anyFieldCriterionBean.selectedType}" valueChangeListener="#{anyFieldCriterionBean.processTypeChanged}">
 						<f:selectItems value="#{anyFieldCriterionBean.typeOptions}"/>
 					</h:selectOneRadio>
 				</span>
